--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,7 +9,7 @@
                     {{ post.published_date }}
 	            </div>
             {% endif %}  
-	        <h2><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h2>
+	        <h2><a href="{% url 'post_detail' slug=post.slug %}">{{post.title}}</a></h2>
 	        <p> {{ post.text|linebreaksbr }} </p>
         </div>
     {% endfor %}
