--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,7 +12,7 @@
 
     	<div class="page-header" >
 		{% if user.is_authenticated %}
-		    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+		    <a href="{% url 'blog:post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 		{% endif %}
 
         <div style="font-size: 30px">
@@ -21,14 +21,14 @@
 	    </div>
 
         <div style="font-size: 25px; text-align: right;">
-            <a href="{% url 'signup' %}">Sign Up</a>
+            <a href="{% url 'blog:signup' %}">Sign Up</a>
         </div>
 
 
         <div style="font-size: 25px; text-align:right;">
 
         {% if user.is_authenticated %}
-            <p><a href="{% url 'user_detail' %}" style="color: white"> Hi {{ user.username }} ! </a></p>
+            <p><a href="{% url 'blog:user_detail' %}" style="color: white"> Hi {{ user.username }} ! </a></p>
                 <p><a href="{% url 'logout' %}">logout</a></p>
         {% else %}
                 <p><b>You are not logged in</b></p>
